Fixes panning + scrollbar.

--- a/css/custom.css
+++ b/css/custom.css
@@ -281,4 +281,15 @@ div#social {
     nav ul li .contribute-big {
       padding: 3px 5px !important; } }
 
+::-webkit-scrollbar {
+    -webkit-appearance: none;
+    width: 7px;
+}
+::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    background-color: rgba(0,0,0,.5);
+    -webkit-box-shadow: 0 0 1px rgba(255,255,255,.5);
+}
+
+
 /*# sourceMappingURL=custom.css.map */
